--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "lucide-react": "^0.263.1",
-    "tone": "^14.7.77"
+    "tone": "14.7.77"
   },
   "scripts": {
     "start": "react-scripts start",
