--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "Interactive educational game for developing critical thinking skills",
   "private": true,
   "dependencies": {
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "lucide-react": "^0.263.1",
     "tone": "14.7.77"
+  },
+  "devDependencies": {
+    "autoprefixer": "10.4.20",
+    "postcss": "8.4.49",
+    "tailwindcss": "3.4.17"
   },
   "scripts": {
     "start": "react-scripts start",
